feat: handle deprecations and other compiler warnings